k8s/driver_service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fun-taxi-driver-service
spec:
  selector:
    app: fun-taxi-driver-service
  ports:
    - protocol: TCP
      port: 7077
      targetPort: 80
